--- a/day-03-khan/khan.css
+++ b/day-03-khan/khan.css
@@ -110,7 +110,7 @@ h1 .khan {
 }
 
 .week-stats {
-	outline: solid 1px red;
+	/*outline: solid 1px red;*/
 	display: inline-block;
 	width: 200px;
 	text-transform: uppercase;
@@ -150,4 +150,53 @@ h1 .khan {
 
 .last-week .stats-value {
 	background-color: rgba(12, 109, 146, 1.0);
+}
+
+/*===================================*/
+
+.close-to-earning {
+	border-top: solid 1px #EEE;
+	margin: 20px auto 0 auto;
+	padding: 30px 0 0 0;
+	width: 600px;
+}
+
+.close-to-earning h2 {
+	font-weight: bold;
+	font-size: 1.5em;
+	text-transform: uppercase;
+	margin: 0 0 20px 0;
+}
+
+.badge {
+	background-color: rgba(162, 34, 22, 1.0);
+	border: solid 15px rgba(236, 107, 73, 1.0);
+	border-radius: 100%;
+	color: rgba(249, 227, 210, 1.0);
+	display: inline-block;
+	font-weight: bold;
+	height: 90px;
+	line-height: 1.2em;
+	width: 90px;
+	font-size: 4.5em;
+}
+
+.badge-talk {
+	display: inline-block;
+	width: 270px;
+	text-align: left;
+	padding: 0 0 0 30px;
+}
+
+.badge-talk p {
+	margin: 5px 0;
+}
+
+.first {
+
+}
+
+.badge-talk .second {
+	font-style: italic;
+	font-weight: bold;
 }
