--- a/day-03-khan/khan.css
+++ b/day-03-khan/khan.css
@@ -200,3 +200,41 @@ h1 .khan {
 	font-style: italic;
 	font-weight: bold;
 }
+
+.recent-activity {
+	border-top: solid 1px #EEE;
+	margin: 0 auto;
+	width: 600px;
+}
+
+.recent-activity h2 {
+	font-weight: bold;
+	margin: 30px 0;
+	text-align: center;
+	text-transform: uppercase;
+	border-bottom: solid 1px #EEE;
+	padding: 30px;
+}
+
+.recent-activity .activity-item {
+	border-bottom: solid 1px #EEE;
+	margin: 10px;
+}
+
+.activity-item {
+	border-bottom: solid 1px #EEE;
+	padding: 10px;
+	margin: 10px;
+}
+
+.left-column {
+	text-align: left;
+	display: inline-block;
+	width: 50%;
+}
+
+.right-column {
+	text-align: right;
+	display: inline-block;
+	width: 50%;
+}
