--- a/day03-position/style.css
+++ b/day03-position/style.css
@@ -10,7 +10,26 @@ h1 {
 h2 {
   color: rgba(149, 151, 165, 1.0);
   font-size: 2em;
-  margin: 75px 0px 0px 0px;
+  margin: 75px 0px 50px 0px;
+}
+
+.list-item {
+  display: inline-block;
+  border-bottom: solid 1px gray;
+}
+
+ul {
+  list-style-type: square;
+  color: gray;
+}
+
+.list-text {
+  color: blue;
+}
+
+.listspan {
+  border-bottom: solid 1px rgba(149, 151, 165, 1.0);
+  color: gray;
 }
 
 .container {
@@ -26,7 +45,6 @@ h2 {
 .list {
   color: rgba(2, 135, 204, 1.0);
   font-size: 2em;
-  text-decoration: underline;
   line-height: 1.5em;
   margin: 75px 0px 0px 0px;
 }
@@ -41,29 +59,29 @@ h2 {
   height: 150px;
   line-height: 150px;
   position: absolute;
-  left: 550px;
-  bottom: 300px;
+  right: -25px;
+  top: 100px;
   width: 150px;
   z-index: 1;
 }
 
 .twit {
     position: absolute;
-    left: 0px;
-    bottom: 0px;
+    left: 30px;
+    bottom: 22px;
     z-index: -1;
 }
 
 .fb {
     position: absolute;
-    left: 100px;
-    bottom: 0px;
+    left: 130px;
+    bottom: 16px;
     z-index: -2;
 }
 
 .goog {
     position: absolute;
-    left: 200px;
-    bottom: 0px;
+    left: 230px;
+    bottom: 21px;
     z-index: -3;
 }
