--- a/day-17-guess-the-number/style.css
+++ b/day-17-guess-the-number/style.css
@@ -71,7 +71,9 @@ header h1 {
 }
 
 #input {
-	font-size: .8em;
+	background-color: black;
+	color: white;
+	font-size: 1.2em;
 	line-height: 2em;
 	padding-left: 8px;
 	margin-bottom: 10px;
@@ -82,10 +84,21 @@ header h1 {
 
 
 #button {
-	background-color: rgba(230, 94, 109, 1.0);
+	background-color: rgba(172, 196, 217, 1.0);
 	border-radius: 5px;
 	line-height: 1.8em;
-	font-size: .7em;
+	font-size: 1.2em;
+	font-weight: 500;
+	width: 120px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+#reset {
+	background-color: rgba(98, 190, 132, 1.0);
+	border-radius: 5px;
+	line-height: 1.8em;
+	font-size: 1.2em;
 	font-weight: 500;
 	width: 120px;
 	padding-top: 5px;
@@ -93,6 +106,7 @@ header h1 {
 }
 
 .output {
+	font-size: 2em;
 	margin-top: 20px;
 }
 
