--- a/day-26-templating-practice/style.css
+++ b/day-26-templating-practice/style.css
@@ -7,7 +7,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -48,3 +48,31 @@ table {
 }
 
 /*====================================*/
+body {
+	font-family: sans-serif;
+	font-size: 1.5em;
+}
+
+.border {
+	border: 1px solid rgba(216, 216, 216, 1.0);
+	padding: 2%;
+	width: 90%;
+	margin: 3%;
+}
+
+p {
+	padding: 1% 2%;
+}
+
+.border .symbol  {
+	color: rgba(0, 0, 255, 1.0);
+
+}
+
+.border .name {
+	font-weight: bold;
+}
+
+.border .price {
+	font-size: 1.5em;
+}
